parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Unused terminals:

    TYPEID
    MAIN

Grammar

Rule 0     S' -> barnameh
Rule 1     barnameh -> PROGRAM ID tarifha
Rule 2     tarifha -> tarifha tarif
Rule 3     tarifha -> tarif
Rule 4     tarif -> STRUCT ID LBRACE tarifhayeMahalli RBRACE
Rule 5     tarif -> STRUCT ID LBRACE RBRACE
Rule 6     tarif -> jens tarifhayeMotheghayyerha SEMI
Rule 7     tarif -> jens ID LPAREN vorudiha RPAREN jomle
Rule 8     tarif -> jens ID LPAREN RPAREN jomle
Rule 9     tarif -> ID LPAREN vorudiha RPAREN jomle
Rule 10    tarif -> ID LPAREN RPAREN jomle
Rule 11    tarifhayeMahalli -> tarifhayeMahalli tarifeMoteghayyereMahdud
Rule 12    tarifhayeMahalli -> tarifeMoteghayyereMahdud
Rule 13    tarifeMoteghayyereMahdud -> jenseMahdud tarifhayeMotheghayyerha SEMI
Rule 14    jenseMahdud -> CONSTANT jens
Rule 15    jenseMahdud -> jens
Rule 16    jens -> BOOL
Rule 17    jens -> INT
Rule 18    jens -> FLOAT
Rule 19    jens -> CHAR
Rule 20    tarifhayeMotheghayyerha -> tarifeMeghdareAvvalie
Rule 21    tarifhayeMotheghayyerha -> tarifhayeMotheghayyerha COMMA tarifeMeghdareAvvalie
Rule 22    tarifeMeghdareAvvalie -> tarifeShenaseyeMoteghayyer
Rule 23    tarifeMeghdareAvvalie -> tarifeShenaseyeMoteghayyer EQUALS ebarateSade
Rule 24    tarifeShenaseyeMoteghayyer -> ID
Rule 25    tarifeShenaseyeMoteghayyer -> ID LBR ICONST RBR
Rule 26    vorudiha -> vorudiha SEMI jensVorudiha
Rule 27    vorudiha -> jensVorudiha
Rule 28    jensVorudiha -> jens shenaseyeVorudiha
Rule 29    shenaseyeVorudiha -> shenaseyeVorudiha COMMA shenaseyeVorudi
Rule 30    shenaseyeVorudiha -> shenaseyeVorudi
Rule 31    shenaseyeVorudi -> ID
Rule 32    shenaseyeVorudi -> ID LBR RBR
Rule 33    jomle -> unmatched
Rule 34    jomle -> matched
Rule 35    matched -> IF ebarateSade THEN M matched Nelse M matched
Rule 36    matched -> otherJomle
Rule 37    unmatched -> IF ebarateSade THEN M jomle
Rule 38    unmatched -> IF ebarateSade THEN M matched Nelse M unmatched
Rule 39    Nelse -> ELSE
Rule 40    N -> <empty>
Rule 41    otherJomle -> LBRACE tarifhayeMahalli jomleha RBRACE
Rule 42    otherJomle -> LBRACE tarifhayeMahalli RBRACE
Rule 43    otherJomle -> ebarat SEMI
Rule 44    otherJomle -> SEMI
Rule 45    otherJomle -> jomleyeTekrar
Rule 46    otherJomle -> RETURN SEMI
Rule 47    otherJomle -> RETURN ebarat SEMI
Rule 48    otherJomle -> BREAK SEMI
Rule 49    jomleyeTekrar -> WHILE M ebarateSade M jomle
Rule 50    otherJomle -> KEY LPAREN ebarateSade RPAREN onsoreHalat END
Rule 51    otherJomle -> KEY LPAREN ebarateSade RPAREN onsoreHalat onsorePishfarz END
Rule 52    jomleha -> jomleha jomle
Rule 53    jomleha -> jomle
Rule 54    onsoreHalat -> stateKW2
Rule 55    onsoreHalat -> onsoreHalat stateKW2
Rule 56    stateKW1 -> STATE ICONST COLON
Rule 57    stateKW2 -> stateKW1 jomle N SEMI
Rule 58    onsorePishfarz -> DEFAULT COLON jomle SEMI
Rule 59    ebarat -> taghirpazir EQUALS ebarat
Rule 60    ebarat -> taghirpazir PLUSEQUAL ebarat
Rule 61    ebarat -> taghirpazir MINUSEQUAL ebarat
Rule 62    ebarat -> taghirpazir TIMESEQUAL ebarat
Rule 63    ebarat -> taghirpazir DIVEQUAL ebarat
Rule 64    ebarat -> taghirpazir PLUSPLUS
Rule 65    ebarat -> taghirpazir MINUSMINUS
Rule 66    ebarat -> ebarateSade
Rule 67    ebarateSade -> ebarateSade3
Rule 68    ebarateSade -> ebarateRiaziManteghi2 amalgareRiazi2 ebarateRiaziManteghi2
Rule 69    ebarateSade -> ebarateRiaziManteghi1 amalgareRiazi1 ebarateRiaziManteghi1
Rule 70    ebarateSade -> ebaratRabetei
Rule 71    ebarateSade0 -> amalgareYegani ebarateYegani
Rule 72    ebarateSade0 -> ID
Rule 73    ebarateSade0 -> taghirpazir LBR ebarat RBR
Rule 74    ebarateSade0 -> taghirpazir DOT ID
Rule 75    ebarateSade0 -> LPAREN ebarat RPAREN
Rule 76    ebarateSade0 -> sedaZadan
Rule 77    ebarateSade0 -> meghdaresabet
Rule 78    ebarateSade1 -> NOT ebarateSade1
Rule 79    ebarateSade1 -> ebarateSade0
Rule 80    ebarateSade2 -> ebarateSade2 AND M ebarateSade2
Rule 81    ebarateSade2 -> ebarateSade1
Rule 82    ebarateSade2 -> ebarateSade2 ANDTHEN ebarateSade2
Rule 83    ebarateSade3 -> ebarateSade3 OR M ebarateSade3
Rule 84    ebarateSade3 -> ebarateSade2
Rule 85    M -> <empty>
Rule 86    ebarateSade3 -> ebarateSade3 ORELSE ebarateSade3
Rule 87    ebaratRabetei -> ebarateRiaziManteghi1 amalgareRabetei ebarateRiaziManteghi1
Rule 88    ebaratRabetei -> ebarateRiaziManteghi2 amalgareRabetei ebarateRiaziManteghi2
Rule 89    amalgareRabetei -> LT
Rule 90    amalgareRabetei -> LE
Rule 91    amalgareRabetei -> GE
Rule 92    amalgareRabetei -> EQ
Rule 93    amalgareRabetei -> GT
Rule 94    ebarateRiaziManteghi1 -> ebarateSade0
Rule 95    ebarateRiaziManteghi1 -> ebarateRiaziManteghi1 amalgareRiazi1 ebarateRiaziManteghi1
Rule 96    ebarateRiaziManteghi2 -> ebarateRiaziManteghi1
Rule 97    ebarateRiaziManteghi2 -> ebarateRiaziManteghi2 amalgareRiazi2 ebarateRiaziManteghi2
Rule 98    amalgareRiazi1 -> TIMES
Rule 99    amalgareRiazi1 -> DIVIDE
Rule 100   amalgareRiazi1 -> MOD
Rule 101   amalgareRiazi2 -> PLUS
Rule 102   amalgareRiazi2 -> MINUS
Rule 103   ebarateYegani -> amalgareYegani ebarateYegani
Rule 104   ebarateYegani -> ID
Rule 105   ebarateYegani -> taghirpazir LBR ebarat RBR
Rule 106   ebarateYegani -> taghirpazir DOT ID
Rule 107   ebarateYegani -> taghirnapazir
Rule 108   amalgareYegani -> MINUS
Rule 109   amalgareYegani -> TIMES
Rule 110   amalgareYegani -> QM
Rule 111   taghirpazir -> ID
Rule 112   taghirpazir -> taghirpazir LBR ebarat RBR
Rule 113   taghirpazir -> taghirpazir DOT ID
Rule 114   taghirnapazir -> LPAREN ebarat RPAREN
Rule 115   taghirnapazir -> sedaZadan
Rule 116   taghirnapazir -> meghdaresabet
Rule 117   sedaZadan -> ID LPAREN bordareVorudiha RPAREN
Rule 118   sedaZadan -> ID LPAREN RPAREN
Rule 119   bordareVorudiha -> bordareVorudiha COMMA ebarat
Rule 120   bordareVorudiha -> ebarat
Rule 121   meghdaresabet -> ICONST
Rule 122   meghdaresabet -> CCONST
Rule 123   meghdaresabet -> TRUE
Rule 124   meghdaresabet -> FALSE

Terminals, with rules where they appear

AND                  : 80
ANDTHEN              : 82
BOOL                 : 16
BREAK                : 48
CCONST               : 122
CHAR                 : 19
COLON                : 56 58
COMMA                : 21 29 119
CONSTANT             : 14
DEFAULT              : 58
DIVEQUAL             : 63
DIVIDE               : 99
DOT                  : 74 106 113
ELSE                 : 39
END                  : 50 51
EQ                   : 92
EQUALS               : 23 59
FALSE                : 124
FLOAT                : 18
GE                   : 91
GT                   : 93
ICONST               : 25 56 121
ID                   : 1 4 5 7 8 9 10 24 25 31 32 72 74 104 106 111 113 117 118
IF                   : 35 37 38
INT                  : 17
KEY                  : 50 51
LBR                  : 25 32 73 105 112
LBRACE               : 4 5 41 42
LE                   : 90
LPAREN               : 7 8 9 10 50 51 75 114 117 118
LT                   : 89
MAIN                 : 
MINUS                : 102 108
MINUSEQUAL           : 61
MINUSMINUS           : 65
MOD                  : 100
NOT                  : 78
OR                   : 83
ORELSE               : 86
PLUS                 : 101
PLUSEQUAL            : 60
PLUSPLUS             : 64
PROGRAM              : 1
QM                   : 110
RBR                  : 25 32 73 105 112
RBRACE               : 4 5 41 42
RETURN               : 46 47
RPAREN               : 7 8 9 10 50 51 75 114 117 118
SEMI                 : 6 13 26 43 44 46 47 48 57 58
STATE                : 56
STRUCT               : 4 5
THEN                 : 35 37 38
TIMES                : 98 109
TIMESEQUAL           : 62
TRUE                 : 123
TYPEID               : 
WHILE                : 49
error                : 

Nonterminals, with rules where they appear

M                    : 35 35 37 38 38 49 49 80 83
N                    : 57
Nelse                : 35 38
amalgareRabetei      : 87 88
amalgareRiazi1       : 69 95
amalgareRiazi2       : 68 97
amalgareYegani       : 71 103
barnameh             : 0
bordareVorudiha      : 117 119
ebarat               : 43 47 59 60 61 62 63 73 75 105 112 114 119 120
ebaratRabetei        : 70
ebarateRiaziManteghi1 : 69 69 87 87 95 95 96
ebarateRiaziManteghi2 : 68 68 88 88 97 97
ebarateSade          : 23 35 37 38 49 50 51 66
ebarateSade0         : 79 94
ebarateSade1         : 78 81
ebarateSade2         : 80 80 82 82 84
ebarateSade3         : 67 83 83 86 86
ebarateYegani        : 71 103
jens                 : 6 7 8 14 15 28
jensVorudiha         : 26 27
jenseMahdud          : 13
jomle                : 7 8 9 10 37 49 52 53 57 58
jomleha              : 41 52
jomleyeTekrar        : 45
matched              : 34 35 35 38
meghdaresabet        : 77 116
onsoreHalat          : 50 51 55
onsorePishfarz       : 51
otherJomle           : 36
sedaZadan            : 76 115
shenaseyeVorudi      : 29 30
shenaseyeVorudiha    : 28 29
stateKW1             : 57
stateKW2             : 54 55
taghirnapazir        : 107
taghirpazir          : 59 60 61 62 63 64 65 73 74 105 106 112 113
tarif                : 2 3
tarifeMeghdareAvvalie : 20 21
tarifeMoteghayyereMahdud : 11 12
tarifeShenaseyeMoteghayyer : 22 23
tarifha              : 1 2
tarifhayeMahalli     : 4 11 41 42
tarifhayeMotheghayyerha : 6 13 21
unmatched            : 33 38
vorudiha             : 7 9 26

Parsing method: LALR

state 0

    (0) S' -> . barnameh
    (1) barnameh -> . PROGRAM ID tarifha

    PROGRAM         shift and go to state 2

    barnameh                       shift and go to state 1

state 1

    (0) S' -> barnameh .



state 2

    (1) barnameh -> PROGRAM . ID tarifha

    ID              shift and go to state 3


state 3

    (1) barnameh -> PROGRAM ID . tarifha
    (2) tarifha -> . tarifha tarif
    (3) tarifha -> . tarif
    (4) tarif -> . STRUCT ID LBRACE tarifhayeMahalli RBRACE
    (5) tarif -> . STRUCT ID LBRACE RBRACE
    (6) tarif -> . jens tarifhayeMotheghayyerha SEMI
    (7) tarif -> . jens ID LPAREN vorudiha RPAREN jomle
    (8) tarif -> . jens ID LPAREN RPAREN jomle
    (9) tarif -> . ID LPAREN vorudiha RPAREN jomle
    (10) tarif -> . ID LPAREN RPAREN jomle
    (16) jens -> . BOOL
    (17) jens -> . INT
    (18) jens -> . FLOAT
    (19) jens -> . CHAR

    STRUCT          shift and go to state 5
    ID              shift and go to state 7
    BOOL            shift and go to state 8
    INT             shift and go to state 6
    FLOAT           shift and go to state 10
    CHAR            shift and go to state 11

    jens                           shift and go to state 4
    tarifha                        shift and go to state 9
    tarif                          shift and go to state 12

state 4

    (6) tarif -> jens . tarifhayeMotheghayyerha SEMI
    (7) tarif -> jens . ID LPAREN vorudiha RPAREN jomle
    (8) tarif -> jens . ID LPAREN RPAREN jomle
    (20) tarifhayeMotheghayyerha -> . tarifeMeghdareAvvalie
    (21) tarifhayeMotheghayyerha -> . tarifhayeMotheghayyerha COMMA tarifeMeghdareAvvalie
    (22) tarifeMeghdareAvvalie -> . tarifeShenaseyeMoteghayyer
    (23) tarifeMeghdareAvvalie -> . tarifeShenaseyeMoteghayyer EQUALS ebarateSade
    (24) tarifeShenaseyeMoteghayyer -> . ID
    (25) tarifeShenaseyeMoteghayyer -> . ID LBR ICONST RBR

    ID              shift and go to state 14

    tarifeShenaseyeMoteghayyer     shift and go to state 13
    tarifeMeghdareAvvalie          shift and go to state 15
    tarifhayeMotheghayyerha        shift and go to state 16

state 5

    (4) tarif -> STRUCT . ID LBRACE tarifhayeMahalli RBRACE
    (5) tarif -> STRUCT . ID LBRACE RBRACE

    ID              shift and go to state 17


state 6

    (17) jens -> INT .

    ID              reduce using rule 17 (jens -> INT .)


state 7

    (9) tarif -> ID . LPAREN vorudiha RPAREN jomle
    (10) tarif -> ID . LPAREN RPAREN jomle

    LPAREN          shift and go to state 18


state 8

    (16) jens -> BOOL .

    ID              reduce using rule 16 (jens -> BOOL .)


state 9

    (1) barnameh -> PROGRAM ID tarifha .
    (2) tarifha -> tarifha . tarif
    (4) tarif -> . STRUCT ID LBRACE tarifhayeMahalli RBRACE
    (5) tarif -> . STRUCT ID LBRACE RBRACE
    (6) tarif -> . jens tarifhayeMotheghayyerha SEMI
    (7) tarif -> . jens ID LPAREN vorudiha RPAREN jomle
    (8) tarif -> . jens ID LPAREN RPAREN jomle
    (9) tarif -> . ID LPAREN vorudiha RPAREN jomle
    (10) tarif -> . ID LPAREN RPAREN jomle
    (16) jens -> . BOOL
    (17) jens -> . INT
    (18) jens -> . FLOAT
    (19) jens -> . CHAR

    $end            reduce using rule 1 (barnameh -> PROGRAM ID tarifha .)
    STRUCT          shift and go to state 5
    ID              shift and go to state 7
    BOOL            shift and go to state 8
    INT             shift and go to state 6
    FLOAT           shift and go to state 10
    CHAR            shift and go to state 11

    jens                           shift and go to state 4
    tarif                          shift and go to state 19

state 10

    (18) jens -> FLOAT .

    ID              reduce using rule 18 (jens -> FLOAT .)


state 11

    (19) jens -> CHAR .

    ID              reduce using rule 19 (jens -> CHAR .)


state 12

    (3) tarifha -> tarif .

    STRUCT          reduce using rule 3 (tarifha -> tarif .)
    ID              reduce using rule 3 (tarifha -> tarif .)
    BOOL            reduce using rule 3 (tarifha -> tarif .)
    INT             reduce using rule 3 (tarifha -> tarif .)
    FLOAT           reduce using rule 3 (tarifha -> tarif .)
    CHAR            reduce using rule 3 (tarifha -> tarif .)
    $end            reduce using rule 3 (tarifha -> tarif .)


state 13

    (22) tarifeMeghdareAvvalie -> tarifeShenaseyeMoteghayyer .
    (23) tarifeMeghdareAvvalie -> tarifeShenaseyeMoteghayyer . EQUALS ebarateSade

    SEMI            reduce using rule 22 (tarifeMeghdareAvvalie -> tarifeShenaseyeMoteghayyer .)
    COMMA           reduce using rule 22 (tarifeMeghdareAvvalie -> tarifeShenaseyeMoteghayyer .)
    EQUALS          shift and go to state 20


state 14

    (7) tarif -> jens ID . LPAREN vorudiha RPAREN jomle
    (8) tarif -> jens ID . LPAREN RPAREN jomle
    (24) tarifeShenaseyeMoteghayyer -> ID .
    (25) tarifeShenaseyeMoteghayyer -> ID . LBR ICONST RBR

    LPAREN          shift and go to state 21
    EQUALS          reduce using rule 24 (tarifeShenaseyeMoteghayyer -> ID .)
    SEMI            reduce using rule 24 (tarifeShenaseyeMoteghayyer -> ID .)
    COMMA           reduce using rule 24 (tarifeShenaseyeMoteghayyer -> ID .)
    LBR             shift and go to state 22


state 15

    (20) tarifhayeMotheghayyerha -> tarifeMeghdareAvvalie .

    SEMI            reduce using rule 20 (tarifhayeMotheghayyerha -> tarifeMeghdareAvvalie .)
    COMMA           reduce using rule 20 (tarifhayeMotheghayyerha -> tarifeMeghdareAvvalie .)


state 16

    (6) tarif -> jens tarifhayeMotheghayyerha . SEMI
    (21) tarifhayeMotheghayyerha -> tarifhayeMotheghayyerha . COMMA tarifeMeghdareAvvalie

    SEMI            shift and go to state 23
    COMMA           shift and go to state 24


state 17

    (4) tarif -> STRUCT ID . LBRACE tarifhayeMahalli RBRACE
    (5) tarif -> STRUCT ID . LBRACE RBRACE

    LBRACE          shift and go to state 25


state 18

    (9) tarif -> ID LPAREN . vorudiha RPAREN jomle
    (10) tarif -> ID LPAREN . RPAREN jomle
    (26) vorudiha -> . vorudiha SEMI jensVorudiha
    (27) vorudiha -> . jensVorudiha
    (28) jensVorudiha -> . jens shenaseyeVorudiha
    (16) jens -> . BOOL
    (17) jens -> . INT
    (18) jens -> . FLOAT
    (19) jens -> . CHAR

    RPAREN          shift and go to state 29
    BOOL            shift and go to state 8
    INT             shift and go to state 6
    FLOAT           shift and go to state 10
    CHAR            shift and go to state 11

    jensVorudiha                   shift and go to state 27
    jens                           shift and go to state 26
    vorudiha                       shift and go to state 28

state 19

    (2) tarifha -> tarifha tarif .

    STRUCT          reduce using rule 2 (tarifha -> tarifha tarif .)
    ID              reduce using rule 2 (tarifha -> tarifha tarif .)
    BOOL            reduce using rule 2 (tarifha -> tarifha tarif .)
    INT             reduce using rule 2 (tarifha -> tarifha tarif .)
    FLOAT           reduce using rule 2 (tarifha -> tarifha tarif .)
    CHAR            reduce using rule 2 (tarifha -> tarifha tarif .)
    $end            reduce using rule 2 (tarifha -> tarifha tarif .)


state 20

    (23) tarifeMeghdareAvvalie -> tarifeShenaseyeMoteghayyer EQUALS . ebarateSade
    (67) ebarateSade -> . ebarateSade3
    (68) ebarateSade -> . ebarateRiaziManteghi2 amalgareRiazi2 ebarateRiaziManteghi2
    (69) ebarateSade -> . ebarateRiaziManteghi1 amalgareRiazi1 ebarateRiaziManteghi1
    (70) ebarateSade -> . ebaratRabetei
    (83) ebarateSade3 -> . ebarateSade3 OR M ebarateSade3
    (84) ebarateSade3 -> . ebarateSade2
    (86) ebarateSade3 -> . ebarateSade3 ORELSE ebarateSade3
    (96) ebarateRiaziManteghi2 -> . ebarateRiaziManteghi1
    (97) ebarateRiaziManteghi2 -> . ebarateRiaziManteghi2 amalgareRiazi2 ebarateRiaziManteghi2
    (94) ebarateRiaziManteghi1 -> . ebarateSade0
    (95) ebarateRiaziManteghi1 -> . ebarateRiaziManteghi1 amalgareRiazi1 ebarateRiaziManteghi1
    (87) ebaratRabetei -> . ebarateRiaziManteghi1 amalgareRabetei ebarateRiaziManteghi1
    (88) ebaratRabetei -> . ebarateRiaziManteghi2 amalgareRabetei ebarateRiaziManteghi2
    (80) ebarateSade2 -> . ebarateSade2 AND M ebarateSade2
    (81) ebarateSade2 -> . ebarateSade1
    (82) ebarateSade2 -> . ebarateSade2 ANDTHEN ebarateSade2
    (71) ebarateSade0 -> . amalgareYegani ebarateYegani
    (72) ebarateSade0 -> . ID
    (73) ebarateSade0 -> . taghirpazir LBR ebarat RBR
    (74) ebarateSade0 -> . taghirpazir DOT ID
    (75) ebarateSade0 -> . LPAREN ebarat RPAREN
    (76) ebarateSade0 -> . sedaZadan
    (77) ebarateSade0 -> . meghdaresabet
    (78) ebarateSade1 -> . NOT ebarateSade1
    (79) ebarateSade1 -> . ebarateSade0
    (108) amalgareYegani -> . MINUS
    (109) amalgareYegani -> . TIMES
    (110) amalgareYegani -> . QM
    (111) taghirpazir -> . ID
    (112) taghirpazir -> . taghirpazir LBR ebarat RBR
    (113) taghirpazir -> . taghirpazir DOT ID
    (117) sedaZadan -> . ID LPAREN bordareVorudiha RPAREN
    (118) sedaZadan -> . ID LPAREN RPAREN
    (121) meghdaresabet -> . ICONST
    (122) meghdaresabet -> . CCONST
    (123) meghdaresabet -> . TRUE
    (124) meghdaresabet -> . FALSE

    ID              shift and go to state 51
    LPAREN          shift and go to state 38
    NOT             shift and go to state 32
    MINUS           shift and go to state 31
    TIMES           shift and go to state 39
    QM              shift and go to state 50
    ICONST          shift and go to state 48
    CCONST          shift and go to state 46
    TRUE            shift and go to state 40
    FALSE           shift and go to state 35

    taghirpazir                    shift and go to state 30
    ebarateSade3                   shift and go to state 45
    ebarateSade2                   shift and go to state 42
    ebarateSade                    shift and go to state 33
    meghdaresabet                  shift and go to state 43
    amalgareYegani                 shift and go to state 44
    ebaratRabetei                  shift and go to state 34
    ebarateRiaziManteghi1          shift and go to state 41
    sedaZadan                      shift and go to state 47
    ebarateSade0                   shift and go to state 36
    ebarateRiaziManteghi2          shift and go to state 49
    ebarateSade1                   shift and go to state 37

state 21

    (7) tarif -> jens ID LPAREN . vorudiha RPAREN jomle
    (8) tarif -> jens ID LPAREN . RPAREN jomle
    (26) vorudiha -> . vorudiha SEMI jensVorudiha
    (27) vorudiha -> . jensVorudiha
    (28) jensVorudiha -> . jens shenaseyeVorudiha
    (16) jens -> . BOOL
    (17) jens -> . INT
    (18) jens -> . FLOAT
    (19) jens -> . CHAR

    RPAREN          shift and go to state 53
    BOOL            shift and go to state 8
    INT             shift and go to state 6
    FLOAT           shift and go to state 10
    CHAR            shift and go to state 11

    jensVorudiha                   shift and go to state 27
    jens                           shift and go to state 26
    vorudiha                       shift and go to state 52

state 22

    (25) tarifeShenaseyeMoteghayyer -> ID LBR . ICONST RBR

    ICONST          shift and go to state 54


state 23

    (6) tarif -> jens tarifhayeMotheghayyerha SEMI .

    STRUCT          reduce using rule 6 (tarif -> jens tarifhayeMotheghayyerha SEMI .)
    ID              reduce using rule 6 (tarif -> jens tarifhayeMotheghayyerha SEMI .)
    BOOL            reduce using rule 6 (tarif -> jens tarifhayeMotheghayyerha SEMI .)
    INT             reduce using rule 6 (tarif -> jens tarifhayeMotheghayyerha SEMI .)
    FLOAT           reduce using rule 6 (tarif -> jens tarifhayeMotheghayyerha SEMI .)
    CHAR            reduce using rule 6 (tarif -> jens tarifhayeMotheghayyerha SEMI .)
    $end            reduce using rule 6 (tarif -> jens tarifhayeMotheghayyerha SEMI .)


state 24

    (21) tarifhayeMotheghayyerha -> tarifhayeMotheghayyerha COMMA . tarifeMeghdareAvvalie
    (22) tarifeMeghdareAvvalie -> . tarifeShenaseyeMoteghayyer
    (23) tarifeMeghdareAvvalie -> . tarifeShenaseyeMoteghayyer EQUALS ebarateSade
    (24) tarifeShenaseyeMoteghayyer -> . ID
    (25) tarifeShenaseyeMoteghayyer -> . ID LBR ICONST RBR

    ID              shift and go to state 56

    tarifeShenaseyeMoteghayyer     shift and go to state 13
    tarifeMeghdareAvvalie          shift and go to state 55

state 25

    (4) tarif -> STRUCT ID LBRACE . tarifhayeMahalli RBRACE
    (5) tarif -> STRUCT ID LBRACE . RBRACE
    (11) tarifhayeMahalli -> . tarifhayeMahalli tarifeMoteghayyereMahdud
    (12) tarifhayeMahalli -> . tarifeMoteghayyereMahdud
    (13) tarifeMoteghayyereMahdud -> . jenseMahdud tarifhayeMotheghayyerha SEMI
    (14) jenseMahdud -> . CONSTANT jens
    (15) jenseMahdud -> . jens
    (16) jens -> . BOOL
    (17) jens -> . INT
    (18) jens -> . FLOAT
    (19) jens -> . CHAR

    RBRACE          shift and go to state 60
    CONSTANT        shift and go to state 62
    BOOL            shift and go to state 8
    INT             shift and go to state 6
    FLOAT           shift and go to state 10
    CHAR            shift and go to state 11

    jenseMahdud                    shift and go to state 61
    tarifhayeMahalli               shift and go to state 59
    tarifeMoteghayyereMahdud       shift and go to state 58
    jens                           shift and go to state 57

state 26

    (28) jensVorudiha -> jens . shenaseyeVorudiha
    (29) shenaseyeVorudiha -> . shenaseyeVorudiha COMMA shenaseyeVorudi
    (30) shenaseyeVorudiha -> . shenaseyeVorudi
    (31) shenaseyeVorudi -> . ID
    (32) shenaseyeVorudi -> . ID LBR RBR

    ID              shift and go to state 64

    shenaseyeVorudiha              shift and go to state 63
    shenaseyeVorudi                shift and go to state 65

state 27

    (27) vorudiha -> jensVorudiha .

    RPAREN          reduce using rule 27 (vorudiha -> jensVorudiha .)
    SEMI            reduce using rule 27 (vorudiha -> jensVorudiha .)


state 28

    (9) tarif -> ID LPAREN vorudiha . RPAREN jomle
    (26) vorudiha -> vorudiha . SEMI jensVorudiha

    RPAREN          shift and go to state 67
    SEMI            shift and go to state 66


state 29

    (10) tarif -> ID LPAREN RPAREN . jomle
    (33) jomle -> . unmatched
    (34) jomle -> . matched
    (37) unmatched -> . IF ebarateSade THEN M jomle
    (38) unmatched -> . IF ebarateSade THEN M matched Nelse M unmatched
    (35) matched -> . IF ebarateSade THEN M matched Nelse M matched
    (36) matched -> . otherJomle
    (41) otherJomle -> . LBRACE tarifhayeMahalli jomleha RBRACE
    (42) otherJomle -> . LBRACE tarifhayeMahalli RBRACE
    (43) otherJomle -> . ebarat SEMI
    (44) otherJomle -> . SEMI
    (45) otherJomle -> . jomleyeTekrar
    (46) otherJomle -> . RETURN SEMI
    (47) otherJomle -> . RETURN ebarat SEMI
    (48) otherJomle -> . BREAK SEMI
    (50) otherJomle -> . KEY LPAREN ebarateSade RPAREN onsoreHalat END
    (51) otherJomle -> . KEY LPAREN ebarateSade RPAREN onsoreHalat onsorePishfarz END
    (59) ebarat -> . taghirpazir EQUALS ebarat
    (60) ebarat -> . taghirpazir PLUSEQUAL ebarat
    (61) ebarat -> . taghirpazir MINUSEQUAL ebarat
    (62) ebarat -> . taghirpazir TIMESEQUAL ebarat
    (63) ebarat -> . taghirpazir DIVEQUAL ebarat
    (64) ebarat -> . taghirpazir PLUSPLUS
    (65) ebarat -> . taghirpazir MINUSMINUS
    (66) ebarat -> . ebarateSade
    (49) jomleyeTekrar -> . WHILE M ebarateSade M jomle
    (111) taghirpazir -> . ID
    (112) taghirpazir -> . taghirpazir LBR ebarat RBR
    (113) taghirpazir -> . taghirpazir DOT ID
    (67) ebarateSade -> . ebarateSade3
    (68) ebarateSade -> . ebarateRiaziManteghi2 amalgareRiazi2 ebarateRiaziManteghi2
    (69) ebarateSade -> . ebarateRiaziManteghi1 amalgareRiazi1 ebarateRiaziManteghi1
    (70) ebarateSade -> . ebaratRabetei
    (83) ebarateSade3 -> . ebarateSade3 OR M ebarateSade3
    (84) ebarateSade3 -> . ebarateSade2
    (86) ebarateSade3 -> . ebarateSade3 ORELSE ebarateSade3
    (96) ebarateRiaziManteghi2 -> . ebarateRiaziManteghi1
    (97) ebarateRiaziManteghi2 -> . ebarateRiaziManteghi2 amalgareRiazi2 ebarateRiaziManteghi2
    (94) ebarateRiaziManteghi1 -> . ebarateSade0
    (95) ebarateRiaziManteghi1 -> . ebarateRiaziManteghi1 amalgareRiazi1 ebarateRiaziManteghi1
    (87) ebaratRabetei -> . ebarateRiaziManteghi1 amalgareRabetei ebarateRiaziManteghi1
    (88) ebaratRabetei -> . ebarateRiaziManteghi2 amalgareRabetei ebarateRiaziManteghi2
    (80) ebarateSade2 -> . ebarateSade2 AND M ebarateSade2
    (81) ebarateSade2 -> . ebarateSade1
    (82) ebarateSade2 -> . ebarateSade2 ANDTHEN ebarateSade2
    (71) ebarateSade0 -> . amalgareYegani ebarateYegani
    (72) ebarateSade0 -> . ID
    (73) ebarateSade0 -> . taghirpazir LBR ebarat RBR
    (74) ebarateSade0 -> . taghirpazir DOT ID
    (75) ebarateSade0 -> . LPAREN ebarat RPAREN
    (76) ebarateSade0 -> . sedaZadan
    (77) ebarateSade0 -> . meghdaresabet
    (78) ebarateSade1 -> . NOT ebarateSade1
    (79) ebarateSade1 -> . ebarateSade0
    (108) amalgareYegani -> . MINUS
    (109) amalgareYegani -> . TIMES
    (110) amalgareYegani -> . QM
    (117) sedaZadan -> . ID LPAREN bordareVorudiha RPAREN
    (118) sedaZadan -> . ID LPAREN RPAREN
    (121) meghdaresabet -> . ICONST
    (122) meghdaresabet -> . CCONST
    (123) meghdaresabet -> . TRUE
    (124) meghdaresabet -> . FALSE

    IF              shift and go to state 74
    LBRACE          shift and go to state 81
    SEMI            shift and go to state 82
    RETURN          shift and go to state 79
    BREAK           shift and go to state 77
    KEY             shift and go to state 83
    WHILE           shift and go to state 76
    ID              shift and go to state 69
    LPAREN          shift and go to state 38
    NOT             shift and go to state 32
    MINUS           shift and go to state 31
    TIMES           shift and go to state 39
    QM              shift and go to state 50
    ICONST          shift and go to state 48
    CCONST          shift and go to state 46
    TRUE            shift and go to state 40
    FALSE           shift and go to state 35

    taghirpazir                    shift and go to state 68
    ebarateSade                    shift and go to state 78
    ebaratRabetei                  shift and go to state 34
    unmatched                      shift and go to state 71
    ebarat                         shift and go to state 70
    ebarateSade1                   shift and go to state 37
    ebarateSade0                   shift and go to state 36
    ebarateSade2                   shift and go to state 42
    matched                        shift and go to state 72
    jomle                          shift and go to state 73
    jomleyeTekrar                  shift and go to state 80
    otherJomle                     shift and go to state 75
    meghdaresabet                  shift and go to state 43
    amalgareYegani                 shift and go to state 44
    ebarateSade3                   shift and go to state 45
    sedaZadan                      shift and go to state 47
    ebarateRiaziManteghi2          shift and go to state 49
    ebarateRiaziManteghi1          shift and go to state 41

state 30

    (73) ebarateSade0 -> taghirpazir . LBR ebarat RBR
    (74) ebarateSade0 -> taghirpazir . DOT ID
    (112) taghirpazir -> taghirpazir . LBR ebarat RBR
    (113) taghirpazir -> taghirpazir . DOT ID

    LBR             shift and go to state 85
    DOT             shift and go to state 84


state 31

    (108) amalgareYegani -> MINUS .

    ID              reduce using rule 108 (amalgareYegani -> MINUS .)
    MINUS           reduce using rule 108 (amalgareYegani -> MINUS .)
    TIMES           reduce using rule 108 (amalgareYegani -> MINUS .)
    QM              reduce using rule 108 (amalgareYegani -> MINUS .)
    LPAREN          reduce using rule 108 (amalgareYegani -> MINUS .)
    ICONST          reduce using rule 108 (amalgareYegani -> MINUS .)
    CCONST          reduce using rule 108 (amalgareYegani -> MINUS .)
    TRUE            reduce using rule 108 (amalgareYegani -> MINUS .)
    FALSE           reduce using rule 108 (amalgareYegani -> MINUS .)


state 32
